fix bug broken layout on details.html when no text on the left button rsvp

--- a/beautify-la-html/content/4_style_1.css
+++ b/beautify-la-html/content/4_style_1.css
@@ -1111,10 +1111,10 @@ body{margin:0;padding:0;font:20px/24px ralewaymedium, sans-serif;color:#000000;o
 .city-filter h2{line-height:44px;}
 .city-filter .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn){width:100%;}
 
-.group-rsvp{width:440px;position:relative;display:inline-block;line-height:38px;padding:0 114px 0 0;}
+.group-rsvp{position:relative;line-height:38px;padding:0 114px 0 0;}
 .group-rsvp p{font:14px/18px ralewaymedium,sans-serif;}
 .group-rsvp p strong{font:14px/18px ralewaybold,sans-serif;}
-.group-rsvp a{position:absolute;top:-1px;right:-3px;}
+.group-rsvp a{position:absolute;top:-1px;right:3px;}
 
 .modal-create{}
 .modal-create .section-header{margin-bottom:30px;}
